crates/ruff_python_parser/tests/snapshots/invalid_syntax@iter_unpack_return_todo.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/iter_unpack_return_todo.py
---
## AST

```
Module(
    ModModule {
        range: 0..167,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    range: 140..166,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("i"),
                        range: 144..145,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 145..147,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Return(
                            StmtReturn {
                                range: 149..166,
                                value: Some(
                                    Tuple(
                                        ExprTuple {
                                            range: 156..166,
                                            elts: [
                                                NumberLiteral(
                                                    ExprNumberLiteral {
                                                        range: 156..157,
                                                        value: Int(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                                Starred(
                                                    ExprStarred {
                                                        range: 160..165,
                                                        value: Name(
                                                            ExprName {
                                                                range: 161..165,
                                                                id: Name("rest"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        ctx: Load,
                                                    },
                                                ),
                                            ],
                                            ctx: Load,
                                            parenthesized: false,
                                        },
                                    ),
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # TODO(brent) this is accepted by 3.7 and 3.8 but not 3.13 (at least).
2 | # looks like a separate change from the tuple unpacking checked here
3 | def i(): return 1, (*rest)
  |                     ^^^^^ Syntax Error: Starred expression cannot be used here
  |
